--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "nvr",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "ui.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "electron": "^28.0.0"
   }
 }
